# hooplytics

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  HOOPLYTICS_MCP_SETUP.md  README.md  hooplytics.ipynb  hooplytics_mcp_server.py  pyproject.toml  requirements.txt  streamlit_app.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.streamlit/: config.toml
bundles/: calibration_v1.json  race_fast.joblib
data/odds/: historical_props.parquet
data/seed_cache/: Ausar_Thompson.parquet  Chet_Holmgren.parquet  Chris_Paul.parquet  Damian_Lillard.parquet  DeMar_DeRozan.parquet  Giannis_Antetokounmpo.parquet  James_Harden.parquet  Jimmy_Butler.parquet  Kevin_Durant.parquet  Kyrie_Irving.parquet  LeBron_James.parquet  Nikola_Jokic.parquet  Paul_George.parquet  Shai_Gilgeous-Alexander.parquet  Stephen_Curry.parquet  Victor_Wembanyama.parquet  _modeling_default.parquet
docs/: index.html
hooplytics/: __init__.py  ai_agent.py  anthropic_agent.py  backtest.py  bdl.py  calibration.py  calibration_cli.py  cli.py  constants.py  data.py  fantasy.py  features_context.py  features_market.py  features_role.py  matchups.py  models.py  odds.py  openai_agent.py  predict.py  report.py  report_performance.py  role_shift_attribute.py  role_shift_detector.py  role_shift_sweep.py  role_shift_validate.py  train_bundle.py
hooplytics/web/: __init__.py  app.py  charts.py  launcher.py  role_shift_widget.py  styles.py
scripts/: build_odds_bundle.py
tests/: test_data_staleness.py  test_matchups.py  test_models_and_predict.py  test_odds.py  test_race_features.py  test_report_performance.py
